# benchie

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/kbocharov/bochbench/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/me/kbocharov/bochbench/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/tinymembench/: asm-opt.c  asm-opt.h  tmblib.cpp
app/src/main/java/com/example/kbocharov/bochbench/: MainActivity.java
app/src/main/java/com/example/kbocharov/bochbench/benchmark/: Benchmark.java  BenchmarkResponder.java  BenchmarkResult.java  BenchmarkTask.java  JavaDoubleMultiplicationBenchmark.java  JavaFloatMultiplicationBenchmark.java  NativeDoubleMultiplicationBenchmark.java  NativeFloatMultiplicationBenchmark.java  Timer.java
app/src/main/java/com/me/kbocharov/bochbench/: MainActivity.java
app/src/main/java/com/me/kbocharov/bochbench/benchmark/: Benchmark.java  BenchmarkResponder.java  BenchmarkResult.java  BenchmarkTask.java  JavaDoubleMultiplicationBenchmark.java  JavaFloatMultiplicationBenchmark.java  NativeDoubleMultiplicationBenchmark.java  NativeFloatMultiplicationBenchmark.java  Timer.java
app/src/main/java/com/me/kbocharov/bochbench/benchmark/multiplication/: Benchmark.java  BenchmarkResult.java  JavaDoubleMultiplicationBenchmark.java  JavaFloatMultiplicationBenchmark.java  NativeDoubleMultiplicationBenchmark.java  NativeFloatMultiplicationBenchmark.java  Runner.java  Timer.java
app/src/main/java/com/me/kbocharov/bochbench/benchmark/scorer/: Attempt.java  ResultStorage.java
app/src/main/java/com/me/kbocharov/bochbench/benchmark/tinymembench/: LatencyBenchResult.java  NativeBenchInfo.java  Runner.java  SpeedBenchResult.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/kbocharov/bochbench/: ExampleUnitTest.java
app/src/test/java/com/me/kbocharov/bochbench/: ExampleUnitTest.java
